--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,600;0,800;1,300;1,600;1,800&display=swap"
       rel="stylesheet"
     />
     <title>Vite + React + TS</title>
