--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Onest:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Bookkepers Pro</title>
+    <title>Bookkeepers Pro</title>
   </head>
   <body>
     <div id="root"></div>
